--- a/packagist/templates/default/parameters.yml.erb
+++ b/packagist/templates/default/parameters.yml.erb
@@ -24,7 +24,7 @@ parameters:
     remember_me.secret: <%=@remember_me%>
 
     google_analytics:
-        ga_key:
+        ga_key: <%=@ga_key%>
 
     github.client_id: <%=@github_client%>
     github.client_secret: <%=@github_secret%>
