--- a/packagist/templates/default/parameters.yml.erb
+++ b/packagist/templates/default/parameters.yml.erb
@@ -34,5 +34,5 @@ parameters:
     nelmio_solarium:
         clients:
             default:
-                dsn: <%=@solr["dsn"]%>
-                timeout: <%=@solr["timeout"]%>
+                dsn: <%=@solr_dsn%>
+                timeout: <%=@solr_timeout%>
